test/types/file/openStdout.good
openStdout.chpl:3: error: halt reached - ***Error: It is not necessary to open "stdout"***
