test/types/file/openStdout.chpl
var  fout : file = stdout;

fout.open;
